@@ -32,7 +32,7 @@ int main(
   char job_id[PBS_MAXCLTJOBID];       /* from the command line */
 
   char job_id_out[PBS_MAXCLTJOBID];
-  char server_out[MAXSERVERNAME];
+  char server_out[MAXSERVERNAME] = "";
   char rmt_server[MAXSERVERNAME];
 
 #define MAX_SIGNAL_TYPE_LEN 32
@@ -88,7 +88,11 @@ cnt:
       {
       any_failed = -1 * connect;
 
-      fprintf(stderr, "qsig: cannot connect to server %s (errno=%d) %s\n",
+      if (server_out[0] != 0)
+        fprintf(stderr, "qsig: cannot connect to server %s (errno=%d) %s\n",
+              server_out, any_failed, pbs_strerror(any_failed));
+      else
+        fprintf(stderr, "qsig: cannot connect to server %s (errno=%d) %s\n",
               pbs_server, any_failed, pbs_strerror(any_failed));
       
       continue;
